--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title><%= Pokemon.name %></title>
+     <style>
+        * {text-align: center;}
+        h1 {color:red;}
+        p {color:blue;}
+    </style>
 </head>
 <body>
-    
+   <h1> <%= Pokemon.name %> </h1><br>
+    <img src = "<%= Pokemon.img %>">
+
 </body>
 </html>
