--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,7 +13,10 @@
 </head>
 <body>
    <h1> <%= Pokemon.name %> </h1><br>
-    <img src = "<%= Pokemon.img %>">
+    <img src = "<%= Pokemon.img %>"><br>
+    <form action="/pokemon">
+        <input type="submit" value="Back to Index"/>
+    </form>
 
 </body>
 </html>
