--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,17 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pokemon</title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|VT323" rel="stylesheet">
     <style>
-        h1 {color:red;}
-        p {color:blue;}
-        img {height:100px;
-            width: auto;}
+        * {text-align: center;}
+        h1 {
+            color:black;
+            font-family: 'Press Start 2P', cursive;}
+        p, li, a {
+            font-size:25px;
+            color:gray;
+            font-family: 'VT323', monospace;
+            text-decoration:none;}
+        img {
+            height:25px;
+            width:auto;
+        }
+        .button {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 10px 10px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 20px;
+            font-family: 'VT323', monospace;}
+        .button:hover, a:hover {
+            opacity: .4;}
     </style>
 </head>
 <body>
     
     <h1> Pokemon Index Page </h1>
+    
         <ul class = "pokemon">
             <% for(let i = 0; i < Pokemon.length; i++){%>
                 <li>
@@ -25,7 +48,6 @@
             Um ok but where's Charmeleon and Blastoise ???
             </li>
         </ul>
-
 
 </body>
 </html>
